# homelab-hub

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  config.example.json  config.schema.json
.github/workflows/: ci.yml
assets/: app.css  app.js
deploy/: Dockerfile  homelab-hub.service
migrations/: 0001_init.sql
scripts/: demo.ps1  demo.sh
src/: cli.rs  main.rs  model.rs  seed.rs  state.rs
src/config/: mod.rs  watch.rs
src/monitor/: http.rs  mod.rs  ping.rs  tcp.rs  tls.rs
src/store/: mod.rs  retention.rs
src/web/: mod.rs  routes.rs  view.rs
templates/: base.html  dashboard.html  detail.html  fragment.html  macros.html
